<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/otpbackground"
    tools:context=".otpactivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/mobile" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/otp_verification"
        android:textColor="#070707"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:text="@string/we_will_send_you_otp_on_the_given_mobile_number"
        android:textColor="#837D7D"
        android:textSize="14sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_gravity="center"
        android:text="@string/enter_mobile_number"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:textColor="#070707"
        android:textSize="14sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:gravity="center"
        android:background="@drawable/backgroundbox"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/_91"
            android:textColor="#1C1B1B"
            android:textSize="16sp" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/inputmobileno"
            android:background="@null"
            android:hint="@string/xxxxxxxxxx"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textSize="16sp"
            android:textStyle="bold"
            android:importantForAutofill="no"/>

    </LinearLayout>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ProgressBar
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:id="@+id/progress_bar_sendingotp"/>
    <Button
        android:id="@+id/buttongetotp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/get_otp"
        android:textColor="#EFE7E7"
        android:textStyle="bold" />

</FrameLayout>


</LinearLayout>


</ScrollView>