<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/otpbackground"
    tools:context=".enter_otp"
    tools:ignore="ScrollViewCount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="90dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/mobile" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textColor="#070707"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="0dp"
            android:text="@string/please_enter_the_otp_sent_to_you"
            android:textColor="#6C6767"
            android:textSize="14sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center"
            android:text="@string/enter_the_otp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:textColor="#070707"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/shownumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:textColor="#090808"
            android:textSize="14sp"
            android:textStyle="bold" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginTop="30dp"
          android:gravity="center">
          <EditText
              android:id="@+id/inputotp1"
              android:layout_width="40dp"
              android:layout_height="46dp"
              android:gravity="center"
              android:imeOptions="actionNext"
              android:importantForAutofill="no"
              android:background="@drawable/backgroundbox"
              android:inputType="number"
              android:maxLength="1"
              android:textSize="24sp"
              android:textStyle="bold"
              tools:ignore="Label for"/>
          <EditText

              android:id="@+id/inputotp2"
              android:layout_width="40dp"
              android:layout_height="46dp"
              android:gravity="center"
              android:imeOptions="actionNext"
              android:importantForAutofill="no"
              android:background="@drawable/backgroundbox"
              android:inputType="number"
              android:maxLength="1"
              android:layout_marginStart="4dp"
              android:layout_marginLeft="4dp"
              android:textSize="24sp"
              android:textStyle="bold"
              tools:ignore="Label for"/>
          <EditText
              android:id="@+id/inputotp3"
              android:layout_width="40dp"
              android:layout_height="46dp"
              android:gravity="center"
              android:imeOptions="actionNext"
              android:importantForAutofill="no"
              android:background="@drawable/backgroundbox"
              android:inputType="number"
              android:maxLength="1"
              android:layout_marginStart="4dp"
              android:layout_marginLeft="4dp"
              android:textSize="24sp"
              android:textStyle="bold"
              tools:ignore="Label for"/>
          <EditText

              android:id="@+id/inputotp4"
              android:layout_width="40dp"
              android:layout_height="46dp"
              android:gravity="center"
              android:imeOptions="actionNext"
              android:importantForAutofill="no"
              android:background="@drawable/backgroundbox"
              android:inputType="number"
              android:maxLength="1"
              android:layout_marginStart="4dp"
              android:layout_marginLeft="4dp"
              android:textSize="24sp"
              android:textStyle="bold"
              tools:ignore="Label for"/>
          <EditText

              android:id="@+id/inputotp5"
              android:layout_width="40dp"
              android:layout_height="46dp"
              android:gravity="center"
              android:imeOptions="actionNext"
              android:importantForAutofill="no"
              android:background="@drawable/backgroundbox"
              android:inputType="number"
              android:maxLength="1"
              android:layout_marginStart="4dp"
              android:layout_marginLeft="4dp"
              android:textSize="24sp"
              android:textStyle="bold"
              tools:ignore="Label for,LabelFor"/>
          <EditText
              android:id="@+id/inputotp6"
              android:layout_width="40dp"
              android:layout_height="46dp"
              android:gravity="center"
              android:imeOptions="actionNext"
              android:importantForAutofill="no"
              android:background="@drawable/backgroundbox"
              android:inputType="number"
              android:maxLength="1"
              android:layout_marginStart="4dp"
              android:layout_marginLeft="4dp"
              android:textSize="24sp"
              android:textStyle="bold"
              tools:ignore="Label for,LabelFor"/>
      </LinearLayout>
          <FrameLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              >
              <ProgressBar
                  android:layout_width="35dp"
                  android:layout_height="35dp"
                  android:layout_gravity="center"
                  android:visibility="gone"
                  android:id="@+id/progress_bar_otpsent"/>
              <Button
                  android:id="@+id/buttongetotp"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="30dp"
                  android:text="@string/submit"
                  android:textColor="#EFE7E7"
                  android:textStyle="bold" />
          </FrameLayout>




    </LinearLayout>
</ScrollView>